Fix 'jumping' of active menu items

--- a/src/assets/sass/modules/jquery-ui/_menu.scss
+++ b/src/assets/sass/modules/jquery-ui/_menu.scss
@@ -96,7 +96,6 @@
 
     .ui-state-focus,
     .ui-state-active {
-        margin: -1px;
         background-color: $color-selected;
     }
 
